updated cloud instrucitons